# stdlib2

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt
.github/workflows/: ci.yaml  cross-compile.yaml
cmake/: compiler_workarounds.cmake  platform_setup.cmake  toolchain-linux32.cmake  toolchain-windows-x64.cmake
include/: math.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  wchar.h
src/: exit.c  file.h  math.c  start.c  stdio.c  stdlib2_start.c  string.c  wchar.c
src/platform/: syscall.h
src/platform/linux/: _fd.c  _write.c  stubs.c
src/platform/linux_x86/: _exit.s  _start.s  _write.s  stubs.c
src/platform/linux_x86_64/: _exit.s  _start.s  _write.s
src/platform/win_x86_64/: _exit.c  _exit.s  _fd.c  _write.c  start.c
src/platform/windows/: _fd.c  _math.c  start.c  windows_workaround.h
test/: CMakeLists.txt
test/src/: constants.h  main.c  test.h  test_abs.c  test_cos.c  test_cosf.c  test_exit.c  test_floor.c  test_fputc.c  test_fputs.c  test_fwrite.c  test_main_args.c  test_memchr.c  test_memcmp.c  test_memcpy.c  test_memset.c  test_offsetof.c  test_putc.c  test_puts.c  test_sin.c  test_sinf.c  test_stdint.c  test_strchr.c  test_strcmp.c  test_strcspn.c  test_strlen.c  test_strtok.c  test_time.c  test_types.c  test_wcscmp.c  test_wcscpy.c  test_wcslen.c
toolchain/: windows-x86.cmake
warnings/: CMakeLists.txt
